# npc

./: .env.example  AGENTS.md  README.md  pyproject.toml  query_game.py
data/: game_knowledge.json
game_state_agent/: analyzer.py  models.py
redis_setup/: setup_redis.py  transform_zone.py
redis_setup/data/: npcs.json
voice-agent/: .env.example  .gitignore  main.py  pyproject.toml
voice-agent/src/: coach.py
voice_agent/: README.md  main.py
voice_agent/src/: coach.py  context.py  overlay.py  ptt.py  screenshot.py  semantic_cache.py  stt.py  tts.py
